fix：api全post
